# BEMT

./: .gitignore  README.md  bemt.py  blade_design.py  case.ipynb  list1.py  pyproject.toml  read_files.py  rotor.py  utils.py
airfoil/: s834_c_drg.txt  s834_c_lft.txt
rotor/: hansen_test_rotor1.json  hansen_test_rotor2.json  hansen_test_rotor3.json
src/: bemt.py  noise.py  rotor.py  structs.py  utils.py
test/: GarrickWatkins.py  hanson.py  readACL11dat.py
validate_data/bemt/: betz_limit_data.txt  numerical_relationships_data.txt
