[tool.poetry]
name = "bemt"
version = "0.1.0"
description = ""
authors = ["Widmark Cardoso"]
readme = "README.md"
packages = [{include = "**\\*.py", from = "."}]


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
pathlib2 = "^2.3.7.post1"
scipy = "^1.14.1"
pandas = "^2.2.2"
nbformat = ">=4.2.0"
pylint = "^3.3.1"
jax = "^0.4.35"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
